@@ -10,28 +10,20 @@ import org.junit.jupiter.params.provider.MethodSource;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
-import uk.gov.hmcts.ecm.common.client.CcdClient;
-import uk.gov.hmcts.et.common.model.bulk.BulkData;
-import uk.gov.hmcts.et.common.model.bulk.BulkDetails;
-import uk.gov.hmcts.et.common.model.bulk.BulkDocumentInfo;
-import uk.gov.hmcts.et.common.model.bulk.BulkRequest;
-import uk.gov.hmcts.et.common.model.bulk.items.SearchTypeItem;
-import uk.gov.hmcts.et.common.model.bulk.types.SearchType;
 import uk.gov.hmcts.et.common.model.ccd.CCDRequest;
 import uk.gov.hmcts.et.common.model.ccd.CaseData;
 import uk.gov.hmcts.et.common.model.ccd.CaseDetails;
 import uk.gov.hmcts.et.common.model.ccd.DocumentInfo;
-import uk.gov.hmcts.et.common.model.ccd.SubmitEvent;
 import uk.gov.hmcts.et.common.model.ccd.types.CorrespondenceScotType;
 import uk.gov.hmcts.et.common.model.ccd.types.CorrespondenceType;
 import uk.gov.hmcts.ethos.replacement.docmosis.utils.InternalException;
 
 import java.io.IOException;
+import java.net.URISyntaxException;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.time.LocalDate;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.stream.Stream;
@@ -43,9 +35,7 @@ import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.when;
 import static uk.gov.hmcts.ecm.common.model.helper.Constants.CLAIMANT;
-import static uk.gov.hmcts.ecm.common.model.helper.Constants.ENGLANDWALES_BULK_CASE_TYPE_ID;
 import static uk.gov.hmcts.ecm.common.model.helper.Constants.ENGLANDWALES_CASE_TYPE_ID;
-import static uk.gov.hmcts.ecm.common.model.helper.Constants.SCOTLAND_BULK_CASE_TYPE_ID;
 import static uk.gov.hmcts.ecm.common.model.helper.Constants.SCOTLAND_CASE_TYPE_ID;
 import static uk.gov.hmcts.ecm.common.model.helper.Constants.YES;
 import static uk.gov.hmcts.ethos.replacement.docmosis.utils.InternalException.ERROR_MESSAGE;
@@ -66,14 +56,10 @@ class DocumentGenerationServiceTest {
     private CaseDetails caseDetails14;
     private CaseDetails caseDetails15;
     private CCDRequest ccdRequest;
-    private BulkRequest bulkRequest;
     private DocumentInfo documentInfo;
-    private BulkDocumentInfo bulkDocumentInfo;
-    @Mock
-    private CcdClient ccdClient;
 
     @BeforeEach
-    void setUp() throws Exception {
+    void setUp() throws URISyntaxException, IOException {
         caseDetailsScot1 = generateCaseDetails("caseDetailsScotTest1.json");
         caseDetails9 = generateCaseDetails("caseDetailsTest9.json");
         caseDetails10 = generateCaseDetails("caseDetailsTest10.json");
@@ -89,25 +75,11 @@ class DocumentGenerationServiceTest {
         CaseData caseData = new CaseData();
         caseDetails.setCaseData(caseData);
         ccdRequest.setCaseDetails(caseDetails);
-        bulkRequest = new BulkRequest();
-        BulkData bulkData = new BulkData();
-        SearchType searchType = new SearchType();
-        searchType.setCaseIDS("1");
-        SearchTypeItem searchTypeItem = new SearchTypeItem();
-        searchTypeItem.setValue(searchType);
-        bulkData.setSearchCollection(new ArrayList<>(Collections.singletonList(searchTypeItem)));
-        BulkDetails bulkDetails = new BulkDetails();
-        bulkDetails.setCaseData(bulkData);
-        bulkDetails.setCaseTypeId(ENGLANDWALES_BULK_CASE_TYPE_ID);
-        bulkRequest.setCaseDetails(bulkDetails);
-        documentGenerationService = new DocumentGenerationService(tornadoService, ccdClient);
+        documentGenerationService = new DocumentGenerationService(tornadoService);
         documentInfo = DocumentInfo.builder().description("resources/exampleV1.json").build();
         documentInfo.setMarkUp("Markup");
         documentInfo.setType("Document");
-        documentInfo.setUrl("http://google.com");
-        bulkDocumentInfo = new BulkDocumentInfo();
-        bulkDocumentInfo.setMarkUps(documentInfo.getMarkUp());
-        bulkDocumentInfo.setErrors(new ArrayList<>());
+        documentInfo.setUrl("https://google.com");
     }
 
     @Test
@@ -137,7 +109,7 @@ class DocumentGenerationServiceTest {
         documentGenerationService.midAddressLabels(caseData);
         assertEquals("Individual", caseData.getClaimantTypeOfClaimant());
         assertEquals("CLAIMANT : Mr A J Rodriguez",
-                caseData.getAddressLabelCollection().get(0).getValue().getFullName());
+                caseData.getAddressLabelCollection().getFirst().getValue().getFullName());
         assertEquals(6, caseData.getAddressLabelCollection().size());
     }
 
@@ -147,7 +119,7 @@ class DocumentGenerationServiceTest {
         documentGenerationService.midAddressLabels(caseData);
         assertEquals("Company", caseData.getClaimantTypeOfClaimant());
         assertEquals("CLAIMANT : Orlando LTD",
-                caseData.getAddressLabelCollection().get(0).getValue().getFullName());
+                caseData.getAddressLabelCollection().getFirst().getValue().getFullName());
         assertEquals(1, caseData.getAddressLabelCollection().size());
     }
 
@@ -157,15 +129,15 @@ class DocumentGenerationServiceTest {
         assertNull(caseDetails13.getCaseData().getBfActions());
         documentGenerationService.updateBfActions(documentInfo, caseDetails13.getCaseData());
         assertEquals(1, caseDetails13.getCaseData().getBfActions().size());
-        assertEquals(YES, caseDetails13.getCaseData().getBfActions().get(0).getValue().getLetters());
+        assertEquals(YES, caseDetails13.getCaseData().getBfActions().getFirst().getValue().getLetters());
         assertEquals(LocalDate.now().toString(),
-                caseDetails13.getCaseData().getBfActions().get(0).getValue().getDateEntered());
+                caseDetails13.getCaseData().getBfActions().getFirst().getValue().getDateEntered());
         assertEquals(LocalDate.now().plusDays(29).toString(),
-                caseDetails13.getCaseData().getBfActions().get(0).getValue().getBfDate());
+                caseDetails13.getCaseData().getBfActions().getFirst().getValue().getBfDate());
         assertEquals("Claim served",
-                caseDetails13.getCaseData().getBfActions().get(0).getValue().getAllActions());
+                caseDetails13.getCaseData().getBfActions().getFirst().getValue().getAllActions());
         assertEquals("Other action",
-                caseDetails13.getCaseData().getBfActions().get(0).getValue().getCwActions());
+                caseDetails13.getCaseData().getBfActions().getFirst().getValue().getCwActions());
 
     }
 
@@ -181,15 +153,15 @@ class DocumentGenerationServiceTest {
         assertNull(caseDetails13.getCaseData().getBfActions());
         documentGenerationService.updateBfActions(documentInfo, caseDetails13.getCaseData());
         assertEquals(1, caseDetails13.getCaseData().getBfActions().size());
-        assertEquals(YES, caseDetails13.getCaseData().getBfActions().get(0).getValue().getLetters());
+        assertEquals(YES, caseDetails13.getCaseData().getBfActions().getFirst().getValue().getLetters());
         assertEquals(LocalDate.now().toString(),
-                caseDetails13.getCaseData().getBfActions().get(0).getValue().getDateEntered());
+                caseDetails13.getCaseData().getBfActions().getFirst().getValue().getDateEntered());
         assertEquals(LocalDate.now().plusDays(29).toString(),
-                caseDetails13.getCaseData().getBfActions().get(0).getValue().getBfDate());
+                caseDetails13.getCaseData().getBfActions().getFirst().getValue().getBfDate());
         assertEquals("Other action",
-                caseDetails13.getCaseData().getBfActions().get(0).getValue().getCwActions());
+                caseDetails13.getCaseData().getBfActions().getFirst().getValue().getCwActions());
         assertEquals("Claim served",
-                caseDetails13.getCaseData().getBfActions().get(0).getValue().getAllActions());
+                caseDetails13.getCaseData().getBfActions().getFirst().getValue().getAllActions());
         caseDetails13.getCaseData().setCorrespondenceScotType(null);
         CorrespondenceType backUp = caseDetails13.getCaseData().getCorrespondenceType();
         caseDetails13.getCaseData().setCorrespondenceType(backUp);
@@ -201,7 +173,7 @@ class DocumentGenerationServiceTest {
         documentGenerationService.midAddressLabels(caseData);
         assertEquals("Individual", caseData.getClaimantTypeOfClaimant());
         assertEquals("CLAIMANT : Mr A J Rodriguez",
-                caseData.getAddressLabelCollection().get(0).getValue().getFullName());
+                caseData.getAddressLabelCollection().getFirst().getValue().getFullName());
         assertEquals(6, caseData.getAddressLabelCollection().size());
     }
 
@@ -211,7 +183,7 @@ class DocumentGenerationServiceTest {
         documentGenerationService.midAddressLabels(caseData);
         assertEquals("Individual", caseData.getClaimantTypeOfClaimant());
         assertEquals("CLAIMANT : Mr A J Rodriguez",
-                caseData.getAddressLabelCollection().get(0).getValue().getFullName());
+                caseData.getAddressLabelCollection().getFirst().getValue().getFullName());
         assertEquals(6, caseData.getAddressLabelCollection().size());
     }
 
@@ -294,22 +266,6 @@ class DocumentGenerationServiceTest {
     }
 
     @Test
-    void clearUserChoicesForMultiplesScotland() {
-        BulkDetails bulkDetails = bulkRequest.getCaseDetails();
-        bulkDetails.setCaseTypeId(SCOTLAND_BULK_CASE_TYPE_ID);
-        documentGenerationService.clearUserChoicesForMultiples(bulkDetails);
-        assertNull(bulkDetails.getCaseData().getCorrespondenceScotType());
-    }
-
-    @Test
-    void clearUserChoicesForMultiplesEngland() {
-        BulkDetails bulkDetails = bulkRequest.getCaseDetails();
-        bulkDetails.setCaseTypeId(ENGLANDWALES_BULK_CASE_TYPE_ID);
-        documentGenerationService.clearUserChoicesForMultiples(bulkDetails);
-        assertNull(bulkDetails.getCaseData().getCorrespondenceType());
-    }
-
-    @Test
     void processDocumentRequest() throws IOException {
         when(tornadoService.documentGeneration(
                 anyString(), any(), anyString(), any(), any(), any())).thenReturn(documentInfo);
@@ -329,86 +285,7 @@ class DocumentGenerationServiceTest {
         });
     }
 
-    @Test
-    void processBulkDocumentRequest() throws IOException {
-        SubmitEvent submitEvent = new SubmitEvent();
-        submitEvent.setCaseId(1);
-        submitEvent.setCaseData(new CaseData());
-        List<SubmitEvent> submitEvents = Collections.singletonList(submitEvent);
-        when(tornadoService.documentGeneration(
-                anyString(), any(), anyString(), any(), any(), any())).thenReturn(documentInfo);
-        when(ccdClient.retrieveCasesElasticSearch(anyString(), any(), any())).thenReturn(submitEvents);
-        BulkDocumentInfo bulkDocumentInfo1 = documentGenerationService.processBulkDocumentRequest(
-                bulkRequest, "authToken");
-        assertEquals(bulkDocumentInfo.toString(), bulkDocumentInfo1.toString());
-    }
-
-    @Test
-    void processBulkDocumentRequestWithErrors() throws IOException {
-        SubmitEvent submitEvent = new SubmitEvent();
-        submitEvent.setCaseId(1);
-        submitEvent.setCaseData(new CaseData());
-        bulkRequest.getCaseDetails().getCaseData().setSearchCollection(null);
-        List<SubmitEvent> submitEvents = Collections.singletonList(submitEvent);
-        when(tornadoService.documentGeneration(
-                anyString(), any(), anyString(), any(), any(), any())).thenReturn(documentInfo);
-        when(ccdClient.retrieveCasesElasticSearch(anyString(), any(), any())).thenReturn(submitEvents);
-
-        BulkDocumentInfo bulkDocumentInfo1 = documentGenerationService.processBulkDocumentRequest(
-                bulkRequest, "authToken");
-        assertEquals("BulkDocumentInfo(markUps=, errors=[There are not cases searched to "
-                + "generate letters], documentInfo=null)", bulkDocumentInfo1.toString());
-    }
-
-    @Test
-    void processBulkDocumentRequestException() throws IOException {
-        SubmitEvent submitEvent = new SubmitEvent();
-        submitEvent.setCaseId(1);
-        submitEvent.setCaseData(new CaseData());
-        List<SubmitEvent> submitEvents = Collections.singletonList(submitEvent);
-        when(tornadoService.documentGeneration(
-                anyString(), any(), anyString(), any(), any(), any()))
-                .thenThrow(new InternalException(ERROR_MESSAGE));
-        when(ccdClient.retrieveCasesElasticSearch(anyString(), any(), any())).thenReturn(submitEvents);
-
-        assertThrows(Exception.class, () ->
-                documentGenerationService.processBulkDocumentRequest(bulkRequest, "authToken")
-        );
-    }
-
-    @Test
-    void processBulkScheduleRequest() throws IOException {
-        when(tornadoService.scheduleGeneration(anyString(), any(), anyString())).thenReturn(documentInfo);
-        BulkDocumentInfo bulkDocumentInfo1 = documentGenerationService.processBulkScheduleRequest(
-                bulkRequest, "authToken");
-        assertEquals("BulkDocumentInfo(markUps=Markup, errors=[], documentInfo=DocumentInfo(type=Document, "
-                        + "description=resources/exampleV1.json, url=http://google.com, markUp=Markup))",
-                bulkDocumentInfo1.toString());
-    }
-
-    @Test
-    void processBulkScheduleRequestWithErrors() throws IOException {
-        bulkRequest.getCaseDetails().getCaseData().setSearchCollection(null);
-        when(tornadoService.scheduleGeneration(anyString(), any(), anyString())).thenReturn(documentInfo);
-        BulkDocumentInfo bulkDocumentInfo1 = documentGenerationService.processBulkScheduleRequest(
-                bulkRequest, "authToken");
-        assertEquals("BulkDocumentInfo(markUps= , errors=[There are not cases searched "
-                        + "to generate schedules], "
-                        + "documentInfo=DocumentInfo(type=null, description=null, url=null, markUp=null))",
-                bulkDocumentInfo1.toString());
-    }
-
-    @Test
-    void processBulkScheduleRequestException() throws IOException {
-        when(tornadoService.scheduleGeneration(anyString(), any(), anyString()))
-                .thenThrow(new InternalException(ERROR_MESSAGE));
-
-        assertThrows(Exception.class, () ->
-                documentGenerationService.processBulkScheduleRequest(bulkRequest, "authToken")
-        );
-    }
-
-    private CaseDetails generateCaseDetails(String jsonFileName) throws Exception {
+    private CaseDetails generateCaseDetails(String jsonFileName) throws URISyntaxException, IOException {
         String json = new String(Files.readAllBytes(Paths.get(Objects
                 .requireNonNull(Thread.currentThread().getContextClassLoader()
                         .getResource(jsonFileName)).toURI())));
